test_report.txt

> starter_helpi@0.1.0 test
> react-scripts test --coverage

FAIL src/App.test.tsx
  ● Test suite failed to run

    Jest encountered an unexpected token

    Jest failed to parse a file. This happens e.g. when your code or its dependencies use non-standard JavaScript syntax, or when Jest is not configured to support such syntax.

    Out of the box Jest supports Babel, which will be used to transform your files into valid JS based on your Babel configuration.

    By default "node_modules" folder is ignored by transformers.

    Here's what you can do:
     • If you are trying to use ECMAScript Modules, see https://jestjs.io/docs/ecmascript-modules for how to enable it.
     • If you are trying to use TypeScript, see https://jestjs.io/docs/getting-started#using-typescript
     • To have some of your "node_modules" files transformed, you can specify a custom "transformIgnorePatterns" in your config.
     • If you need a custom transformation specify a "transform" option in your config.
     • If you simply want to mock your non-JS modules (e.g. binary assets) you can stub them out with the "moduleNameMapper" config option.

    You'll find more details and examples of these config options in the docs:
    https://jestjs.io/docs/configuration
    For information about custom transformations, see:
    https://jestjs.io/docs/code-transformation

    Details:

    /home/runner/work/starter_helpi/starter_helpi/node_modules/react-markdown/index.js:9
    export {Markdown as default, defaultUrlTransform} from './lib/index.js'
    ^^^^^^

    SyntaxError: Unexpected token 'export'

      1 | // import useChatGPT from "./hooks/useChatGPT";
      2 | import "./results.css";
    > 3 | import Markdown from "react-markdown";
        | ^
      4 | import { PieChart } from "@mui/x-charts/PieChart";
      5 | import emailjs from "@emailjs/browser";
      6 | import { FormEvent, useRef, useState } from "react";

      at Runtime.createScriptFromCode (node_modules/jest-runtime/build/index.js:1728:14)
      at Object.<anonymous> (src/Results.tsx:3:1)
      at Object.<anonymous> (src/App.tsx:8:1)
      at Object.<anonymous> (src/App.test.tsx:3:1)
      at TestScheduler.scheduleTests (node_modules/@jest/core/build/TestScheduler.js:333:13)
      at runJest (node_modules/@jest/core/build/runJest.js:404:19)
      at _run10000 (node_modules/@jest/core/build/cli/index.js:320:7)
      at runCLI (node_modules/@jest/core/build/cli/index.js:173:3)

------------------------------|---------|----------|---------|---------|-------------------
File                          | % Stmts | % Branch | % Funcs | % Lines | Uncovered Line #s 
------------------------------|---------|----------|---------|---------|-------------------
All files                     |       0 |        0 |       0 |       0 |                   
 src                          |       0 |        0 |       0 |       0 |                   
  App.tsx                     |       0 |      100 |       0 |       0 | 11-24             
  Footer.tsx                  |       0 |        0 |       0 |       0 | 6-26              
  Modal.tsx                   |       0 |        0 |       0 |       0 | 9-28              
  ProgressBar.tsx             |       0 |      100 |       0 |       0 | 10-16             
  QuestionFormatComponent.tsx |       0 |        0 |       0 |       0 | 5-24              
  Results.tsx                 |       0 |        0 |       0 |       0 | 26-350            
  basic.tsx                   |       0 |        0 |       0 |       0 | 15-86             
  basicDetailedButton.tsx     |       0 |        0 |       0 |       0 | 7-20              
  basicSlider.tsx             |       0 |      100 |       0 |       0 | 3-11              
  detailed.tsx                |       0 |        0 |       0 |       0 | 21-170            
  index.tsx                   |       0 |      100 |     100 |       0 | 6-19              
  navbar.tsx                  |       0 |      100 |       0 |       0 | 6                 
  reportWebVitals.ts          |       0 |        0 |       0 |       0 | 3-10              
 src/hooks                    |       0 |        0 |       0 |       0 |                   
  useChatGPT.ts               |       0 |        0 |       0 |       0 | 14-85             
 src/interfaces               |       0 |        0 |       0 |       0 |                   
  basicOption.ts              |       0 |        0 |       0 |       0 |                   
  questionFormat.ts           |       0 |        0 |       0 |       0 |                   
------------------------------|---------|----------|---------|---------|-------------------
Test Suites: 1 failed, 1 total
Tests:       0 total
Snapshots:   0 total
Time:        3.405 s
Ran all test suites.
